# splat-memory

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt  run_pipeline_debug.py
docs/: api.md  iphone-guide.md  pipeline.md  sdk-guide.md
fusion/: __init__.py  backproject.py  calibration.py  spatial_relations.py
perception/: __init__.py  auto_mask.py  depth.py  detector.py  gemini_tagger.py  iphone_depth.py  nms.py  pipeline.py  sam3_detector.py  segmentor.py  som_labeler.py  tag_filter.py  tagger.py
reasoning/: __init__.py  llm.py
scene/: __init__.py  models.py
sdk/: __init__.py  client.py
static/: index.html
video/: __init__.py  keyframes.py  mast3r_wrapper.py  models.py  object_merger.py  smart_keyframes.py  structural_merge.py  video_pipeline.py
visualization/: __init__.py  annotate.py  floorplan.py  pointcloud.py
